refs #224. * New MMW-Tab-Framework version solves some bugs found and it also adds some functionalities to manage the tabs and its content. Now, the content of each opened tab is loaded even if it isn't the visible Tab content. It makes possible the event propagation on the fly between these opened gadgets. * Some style issues added.
git-svn-id: file:///home/borja/svnDUMPS/ezwebplatform@1313 2a98c5bb-d66c-48ca-a96c-db028a6c31f4

--- a/ezmobileweb/trunk/iphonePrototype/media/css/iphone.css
+++ b/ezmobileweb/trunk/iphonePrototype/media/css/iphone.css
@@ -1,14 +1,18 @@
 
 body{
-	background:#fcfcfc;
+	background:#fcfcfc ;
+	/*background-color: rgb(197,204,211) !important;
+	background-image: url(/ezweb/images/iphone/stripes.png);*/
 	margin: 0;
     font-family: Helvetica;
     color:#4C5054;
+    /*color: #4C566C;*/
 }
 
 a, a:link, a:visited, a:hover{
 	text-decoration: none;
 	color: #2D6F9C;
+	/*color: #4C566C;*/
 }
 
 img{
@@ -50,9 +54,10 @@ wrapper{
     height: 20px;
     font-size: 20px;
     font-weight: bold;
+    font-family: Helvetica;
     text-align: center;
     text-shadow: #3F4E63 0px -1px 1px;
-    background: url(/images/iPhoneToolbar.png) #8191AA repeat-x;
+    background: url(/ezweb/images/iphone/iPhoneToolbar.png) #8191AA repeat-x;
     color: #fcfcfc;
 }
 
@@ -181,6 +186,10 @@ body[orient="landscape"] #mymw-nav {
 	color: #4C5054;
 }
 
+#mymw-nav li.mymw-inactive {
+	visibility: hidden;
+}
+
 .bar{
 	position: relative;
 	width: 100%;
@@ -200,6 +209,14 @@ body[orient="landscape"] #mymw-nav {
 	margin: auto;
 	display: block;
 	width: 98%;
+	position: relative;
+}
+.igadget_section>div {
+	position: absolute;
+	width: 100%;
+}
+.igadget_section div.mymw-inactive {
+	visibility: hidden;
 }
 
 body[orient="portrait"] .igadget_section{
@@ -243,18 +260,19 @@ body[orient="landscape"] .gadget_content_full{
 .related_gadgets{
 	border: 1px solid #E0E0E0;
 	width: 95%;
-	min-height: 35px;
+	height: 36px;
 	padding: 0px;
 	margin: 2px auto;
 	text-align: center;
 	display: block;
+	padding: 2px 0;
 }
 .related_gadget_div{
 	display: inline;
 }
 
 .related_gadget{
-	margin: 2px 5px 2px 5px;
+	margin: 0 5px;
 	height: 35px;
 	width: 35px;
 	cursor: pointer;
